# trading-execution-env

./: .env  .gitignore  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  requirements.txt  trading_execution_env_environment.py
