# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-trading_execution_env"
version = "0.1.0"
description = "Trading Execution Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "setuptools>=70.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m trading_execution_env.server.app
server = "trading_execution_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["trading_execution_env", "trading_execution_env.server"]
package-dir = { "trading_execution_env" = ".", "trading_execution_env.server" = "server" }